# DREAM3D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeMacros.cmake  CodeToLatex.sh  Contributors.md  License.txt.in  ReadMe-SIMPLView.md  ReadMe.md  ReadMe.txt.in  cmpCMakeMacros.cmake  cmpProject.cmake  cmpTests.cmake
Code/AIM/: CMakeLists.txt
Code/AIM/Common/: AIMArray.hpp  AIMImage.cpp  AIMImage.h  SourceList.cmake
Code/AIM/ImageFilters/: AIMCropGrayScaleImage.cpp  AIMCropGrayScaleImage.h  AIMImageFilter.cpp  AIMImageFilter.h  AIMImagePadFilter.cpp  AIMImagePadFilter.h  SourceList.cmake
Code/AngReader/: AngConstants.h  AngDirectoryPatterns.cpp  AngDirectoryPatterns.h  AngFileHelper.cpp  AngFileHelper.h  AngReader.cpp  AngReader.h  AngUtils.hpp  CMakeLists.txt  OIMColoring.hpp  itkAngImageIO.cpp  itkAngImageIO.h  itkAngImageIOFactory.cpp  itkAngImageIOFactory.h
Code/CrossCorrelation_old/GUI/: CMakeLists.txt  QCrossCorrelation.cpp  QCrossCorrelation.h
Code/CrossCorrelation_old/GUI/UI_Files/: QCrossCorrelation.ui
Code/IPHelper/Application/: CMakeLists.txt  IPHelper.cpp  IPHelper.h  IPHelperApp.cpp  IPHelperApp.h  main.cpp
Code/IPHelper/Application/UI_Files/: IPHelper.ui  IPHelperApp.ui
Code/IPHelper/plugins/CrossCorrelation/: CMakeLists.txt  CrossCorrelation.cpp  CrossCorrelation.h  CrossCorrelationData.cpp  CrossCorrelationData.h  CrossCorrelationInputUI.cpp  CrossCorrelationInputUI.h  CrossCorrelationInputUI.ui  CrossCorrelationPlugin.cpp  CrossCorrelationPlugin.h  CrossCorrelationTable.cpp  CrossCorrelationTable.h  CrossCorrelationTask.cpp  CrossCorrelationTask.h
Code/IPHelper/plugins/CrossCorrelation/itk/: itkFFTShiftImageFilter.txx
Code/IPHelper/plugins/CrossCorrelation/pcm/: itkMaxPhaseCorrelationOptimizer.h  itkPhaseCorrelationImageRegistrationMethodImageSource.h  itkPhaseCorrelationOptimizer.txx
Code/IPHelper/plugins/EMMPM/: CMakeLists.txt  EMMPMInputUI.cpp  EMMPMInputUI.h  EMMPMInputUI.ui  EMMPMPlugin.cpp  EMMPMPlugin.h  EMMPMTask.cpp  EMMPMTask.h  Random.h
Code/IPHelper/plugins/MutualInformation/: CMakeLists.txt  MITest.cpp  MiscFunctions.c  itkMITest.cpp
Code/MIApp/: CMakeLists.txt  QMIApp.cpp  QMIApp.h  R3DCompositionRenderer.cpp  R3DCompositionRenderer.h  hoverpoints.cpp  hoverpoints.h  main.cpp
Code/MIApp/UI_Files/: QMIApp.ui
Code/MXA/: CMakeLists.txt
Code/MXA/BMPIO/: MXABmpHeaders.h  MXABmpIO.cpp  SourceList.cmake
Code/MXA/Common/: DLLExport.h  LogTime.h  MXASetGetMacros.h  SourceList.cmake
Code/MXA/Qt/: ApplicationAboutBoxDialog.cpp  ApplicationAboutBoxDialog.h  MXAImageGraphicsDelegate.cpp  MXAImageGraphicsDelegate.h  ProcessQueueController.h  ProcessQueueTask.h  QRecentFileList.cpp  SourceList.cmake
Code/MXA/Qt/UI_Files/: ApplicationAboutBoxDialog.ui
Code/MXA/Utilities/: BmpToTiff.cpp  MXALogger.cpp  MXALogger.h  SourceList.cmake  StringUtils.h
Code/QtSupport/: ApplicationAboutBoxDialog.cpp  ApplicationAboutBoxDialog.h  CMakeLists.txt  ImageGraphicsDelegate.cpp  ImageGraphicsDelegate.h  MXAImageGraphicsDelegate.h  ProcessQueueController.cpp  ProcessQueueController.h  ProcessQueueDialog.cpp  ProcessQueueDialog.h  ProcessQueueTask.cpp  ProcessQueueTask.h  QFSDroppableGraphicsView.cpp  QFSDroppableGraphicsView.h  QFileCompleter.cpp  QFileCompleter.h  QRecentFileList.h
Code/QtSupport/UI_Files/: ApplicationAboutBoxDialog.ui  ProcessQueueDialog.ui
Code/TO79/Application/: CMakeLists.txt  TO79Application.cpp  TO79Application.h  TO79MainWindow.cpp  TO79MainWindow.h  main.cpp
Code/TO79/Application/UI_Files/: TO79Application.ui  TO79MainWindow.ui
Code/TO79/Application/plugins/CrossCorrelation/: CMakeLists.txt  CrossCorrelation.cpp  CrossCorrelationData.cpp  CrossCorrelationInputUI.cpp  CrossCorrelationInputUI.h  CrossCorrelationInputUI.ui  CrossCorrelationPlugin.cpp  CrossCorrelationPlugin.h  CrossCorrelationTable.cpp  CrossCorrelationTask.cpp  CrossCorrelationTask.h
Code/TO79/Application/plugins/CrossCorrelation/ImageFilters/: R3DImageFilter.cpp
Code/TO79/Application/plugins/CrossCorrelation/pcm/: itkPhaseCorrelationOperator.txx
Code/TO79/Application/plugins/EMMPM/: CMakeLists.txt  EMMPMInputUI.cpp  EMMPMInputUI.h  EMMPMInputUI.ui  EMMPMPlugin.cpp  EMMPMPlugin.h  EMMPMTask.cpp
Code/TO79/Qt/: CMakeLists.txt  QImageProcessingInterface.h  TO79MainWindow.cpp  TO79MainWindow.h  main.cpp
Code/TO79/Qt/UI_Files/: TO79MainWindow.ui
Code/TO79/Qt/plugins/: EMMPMPlugin.cpp  EMMPMPlugin.h
Code/TO79/plugins/EMMPM/: CMakeLists.txt  EMMPMInputUI.cpp  EMMPMInputUI.h  EMMPMPlugin.cpp  EMMPMPlugin.h  EMMPMTask.h
ConfiguredFiles/: PrimitiveTypes.h.in  cmpConfiguration.h.in  cmpPrimitiveTypes.h.in  cmpVersion.cpp.in  cmpVersion.h.in
CoreTests/: ConfigureChecks.cmake  GenerateVersionString.cpp  cmpConfigureChecks.cmake
ExtLib/: PCLSupport.cmake  (+7 more)
Source/CrossCorrelation/GUI/: CMakeLists.txt  CrossCorrelationTask.cpp  CrossCorrelationTask.h  QCrossCorrelation.cpp  QCrossCorrelation.h  main.cpp
Source/CrossCorrelation/GUI/UI_Files/: QCrossCorrelation.ui
Source/CrossCorrelation/Unused/: CMakeLists.txt  CrossCorrelationController.cpp  CrossCorrelationController.h  CrossCorrelationTable.cpp  CrossCorrelationTable.h  main.cpp
Source/EMMPM/GUI/: CMakeLists.txt  EmMpmTask.cpp  EmMpmTask.h  EmMpmThread.cpp  ProcessQueueController.cpp  ProcessQueueDialog.cpp  ProcessQueueDialog.h  QEmMpm.cpp  QEmMpm.h  main.cpp
Source/EmMpm/GUI/: CMakeLists.txt  EmMpmTask.cpp  EmMpmTask.h  EmMpmThread.h  ProcessQueue.cpp  ProcessQueue.h  ProcessQueueController.cpp  ProcessQueueWindow.cpp  ProcessQueueWindow.h  QEmMpm.cpp  QEmMpm.h  main.cpp
Source/EmMpm/GUI/UI_Files/: ProcessQueueDialog.ui  ProcessQueueWindow.ui  QEmMpm.ui
Source/MXA/: CMakeLists.txt
Source/MXA/BMPIO/: BMPIO_SourceList.cmake  MXABmpIO.h
Source/MXA/Common/: Common_SourceList.cmake  MXASetGetMacros.h
Source/MXA/Qt/: MXAImageGraphicsDelegate.cpp  ProcessQueueDialog.cpp  ProcessQueueTask.cpp  QFSDroppableGraphicsView.h  QFileCompleter.h  Qt_SourceList.cmake
Source/MXA/Utilities/: MXADir.cpp  MXAFileSystemPath.cpp  MXALogger.cpp  Utilities_SourceList.cmake  _MXAFileSystemPath.h
(+134 files in other folders)
